# Pass_test

./: .gitignore  Dockerfile  Makefile  mkdocs.yml  pyproject.toml
.github/workflows/: continuos_integration.yml
docs/: README.md
src/: app.py  password_check.py
tests/: test_password.py
