[tool.poetry]
name = "pass-test"
version = "0.1.0"
description = "App para checagem de passwords"
authors = ["Marco Lemos <marco.trab4@gmail.com>"]
readme = "README.md"
packages = [{include = "pass_test"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
blue = "^0.9.1"
isort = "^5.11.4"
mkdocs = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
