[tool.poetry]
name = "pass-test"
version = "0.1.0"
description = "App para checagem de passwords"
authors = ["Marco Lemos <marco.trab4@gmail.com>"]
readme =  ["docs/index.md"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
isort = "^5.11.4"
mkdocs = "^1.4.2"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
